# ocaml_react_native_sample

./: .gitignore  .gitmodules  App.tsx  README.md  app.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/orn_sample/: ReactNativeFlipper.java
android/app/src/main/java/com/orn_sample/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/orn_sample/: ReactNativeFlipper.java
ios/: Podfile
ios/orn_sample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/orn_sample.xcodeproj/: project.pbxproj
ios/orn_sample.xcodeproj/xcshareddata/xcschemes/: orn_sample.xcscheme
ios/orn_sampleTests/: orn_sampleTests.m
mlsrc/: .gitignore  dune  dune-project  orn_sample_camlbundle.opam
mlsrc/js/: camlentry.ml  dune
mlsrc/lib/: app_lib.ml  dune
